--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
     compileOnly 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    //Mybatis
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
+
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
