--- a/src/frontend/lect/package.json
+++ b/src/frontend/lect/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.6.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,9 +26,6 @@
       "react-app/jest"
     ]
   },
-
-  "proxy": "http://localhost:8080",
-
   "browserslist": {
     "production": [
       ">0.2%",
